use respond_with, add coffee script and use of asset pack. make sinatra modular.

--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -4,8 +4,8 @@
     %meta{charset: 'UTF-8'}
     %title Before You
     %meta{content: 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name: :viewport}
-    %script{src: '//code.jquery.com/jquery-1.11.0.min.js'}
 
+    != js :app
 
     <meta content="" name="description">
     <meta content="" name="keywords">
