--- a/views/index.html.haml
+++ b/views/index.html.haml
@@ -21,25 +21,14 @@
     <img src="" alt="" title="" />
     <img src="" alt="" title="" />
 
-:css
-  body, #container {width: 100%; height: 100%; overflow: hidden;}
-  .queue-area {position: absolute; bottom: 150px; right: 200px; width: 400px; height: 300px;}
-  .queue-area .queue {width: 100%; height: 300%;}
-  .queue-area .queue img {position: absolute; display: block; top: 0; left: 0; opacity: 0; width: 400px; height: 300px; background-color: #eee; border: 1px solid #ccc;
-  transition: opacity .8s ease-out;
-  border-top: 1px solid #ff0000;
-  backface-visibility: hidden;
-  transform-origin: center center;
-  }
-  .queue-area .queue img.done {transition: transform .3s ease-out, top .3s ease-out, opacity .2s ease-out;}
-  .queue-area .queue img.hover {top: -20px;}
-  .queue-area .queue img.open {top: -284px; opacity: 1 !important; transition: transform .2s .2s ease-out, top .3s ease-out, opacity .2s ease-out;}
-
-  .queue-area {
-  perspective: 1200px;
-  }
-  .queue-area .queue {
-  transform-style: preserve-3d;
-  transform: translateZ( 0 ) rotate3d(-133,360,-39,55deg);
-  transform-origin: center center;
-  }
+#before-you-about
+  %p
+    You:
+    - if @you.located?
+      - unless @you.reserved?
+        = @you.address
+      - else
+        %span.blink [tracing]
+    - else
+      %span.blink [looking]
+    (#{@you.ip_address})
