update code, capture error in sidekiq. use dummy ip if 127.0.0.1 or ::1 ip address.

--- a/views/index.html.haml
+++ b/views/index.html.haml
@@ -1,25 +1,9 @@
 #before-you-queue.queue-area
-  .queue
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
-    <img src="" alt="" title="" />
+  %ul.queue.list-unstyled
+    - @before_you.each do |loc|
+      %li
+        = loc.address
+        (#{loc.ip_address})
 
 #before-you-about
   %p
