--- a/app/css/screen.scss
+++ b/app/css/screen.scss
@@ -1,4 +1,6 @@
-body, #container {width: 100%; height: 100%; overflow: hidden;}
+body, #container {
+  width: 100%; height: 100%; overflow: hidden;
+}
 
 .queue-area {
   // position: absolute; bottom: 150px; right: 200px; width: 400px; height: 300px; 
@@ -19,4 +21,9 @@ body, #container {width: 100%; height: 100%; overflow: hidden;}
 
   }
 
+}
+
+
+canvas {
+  width: 100%; height: 100%;
 }
