--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -2,48 +2,47 @@
 %html{lang: :en, 'xmlns:fb' => 'http://www.facebook.com/2008/fbml', 'xmlns:og' => 'http://opengraphprotocol.org/schema/', 'xmlns' => 'http://www.w3.org/1999/xhtml'}
   %head{prefix: 'og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#'}
     %meta{charset: 'UTF-8'}
-    %title Before You
+    %title= @meta_page_title
     %meta{content: 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name: :viewport}
+    %meta{content: @meta_page_desc, name: 'description'}
+    %meta{content: '', name: 'keywords'}
+    %meta{content: 'US', name: 'language'}
+    %meta{content: 'en-us', itemprop: 'inLanguage'}
+    %meta{content: '/', name: 'url'}
+    %link{href: '', rel: 'canonical'}
+    %link{href: '/about', rel: 'help'}
+    %link{href: '/', rel: 'Start'}
+    %meta{content: 'Copyright 2015 Greg Leuch, unless noted differently.', name: 'copyright'}
+    %meta{content: 'Greg Leuch at https://gleu.ch/', name: 'author'}
+    %meta{content: 'Greg Leuch', name: 'owner'}
+    %meta{content: 'index,follow', name: 'robots'}
+    %meta{content: 'index,follow', name: 'googlebot'}
+    %meta{content: '3 days', name: 'revisit-after'}
+    %meta{content: 'General', name: 'rating'}
+    %meta{content: 'global', name: 'distribution'}
+    %meta{content: 'worldwide', name: 'coverage'}
+    %meta{content: 'b4u:today', name: 'generator'}
+    %link{crossOrigin: '', href: '/favicon.png', rel: 'shortcut icon', type: 'image/png'}
+    %link{href: '/images/share/logo.png', rel: 'image_src'}
+    %meta{content: 'b4u.today', property: 'og:site_name'}
+    %meta{content: request.url, property: 'og:url'}
+    %meta{content: @meta_page_title, property: 'og:title'}
+    %meta{content: @meta_page_desc, property: 'og:description'}
+    %meta{content: '/images/share/logo.png', property: 'og:image'}
+    %meta{content: 'website', property: 'og:type'}
+    %meta{content: '', property: 'fb:app_id'}
+    %meta{content: '7002294', property: 'fb:admins'}
+    %meta{content: '@gleuch', name: 'twitter:site'}
+    %meta{content: '@gleuch', name: 'twitter:creator'}
+    %meta{content: '/images/share/logo.png', name: 'twitter:image:src'}
+    %meta{content: '', name: 'google-site-verification'}
+    %link{href: 'https://gleu.ch', rel: 'publisher'}
+    %meta{content: @meta_page_desc, itemprop: 'description'}
+    %meta{content: '/images/share/logo.png', itemprop: 'image'}
+    %meta{content: 'false', name: 'pinterest-rich-pin'}
 
     != js :app
     != css :app
-
-    <meta content="" name="description">
-    <meta content="" name="keywords">
-    <meta content="US" name="language">
-    <meta content="en-us" itemprop="inLanguage">
-    <meta content="/" name="url">
-    <link href="" rel="canonical">
-    <link href="/about" rel="help">
-    <link href="/" rel="Start">
-    <meta content="Copyright 2003–2015 Greg Leuch, unless noted differently." name="copyright">
-    <meta content="Greg Leuch at https://gleu.ch/" name="author">
-    <meta content="Greg Leuch" name="owner">
-    <meta content="index,follow" name="robots">
-    <meta content="index,follow" name="googlebot">
-    <meta content="3 days" name="revisit-after">
-    <meta content="General" name="rating">
-    <meta content="global" name="distribution">
-    <meta content="worldwide" name="coverage">
-    <meta content="" name="generator">
-    <link crossOrigin="" href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="/images/share/logo.png" rel="image_src">
-    <meta content="Greg Leuch : Creative &amp; Interactive" property="og:site_name">
-    <meta content="/" property="og:url">
-    <meta property="og:title">
-    <meta property="og:description">
-    <meta content="/images/share/logo.png" property="og:image">
-    <meta content="website" property="og:type">
-    <meta content="" property="fb:app_id">
-    <meta content="7002294" property="fb:admins">
-    <meta content="@gleuch" name="twitter:site">
-    <meta content="@gleuch" name="twitter:creator">
-    <meta content="/images/share/logo.png" name="twitter:image:src">
-    <meta content="" name="google-site-verification">
-    <link href="" rel="publisher">
-    <meta itemprop="description">
-    <meta content="/images/share/logo.png" itemprop="image">
-    <meta content="false" name="pinterest-rich-pin">
 
     <script>
     var ga = function() {
