--- a/app/css/screen.scss
+++ b/app/css/screen.scss
@@ -1,29 +1,7 @@
 body, #container {
-  width: 100%; height: 100%; overflow: hidden;
+  width: 100%; height: 100%; overflow: hidden; padding: 0; margin: 0;
 }
 
-.queue-area {
-  // position: absolute; bottom: 150px; right: 200px; width: 400px; height: 300px; 
-  // position: fixed; bottom: 150px; right: 200px; margin-left: -200px; margin-top: -150px;
-  position: fixed; bottom: 50%; right: 50%; margin-right: -200px; margin-bottom: -150px;
-  //-webkit-perspective: 100; perspective: 100;
-  -webkit-perspective-origin: -100% -45%;
-  .queue { position: relative; width: 400px; height: 300px; transform-style: preserve-3d; transform-origin: center center;
-    &.drag {cursor: move; cursor: -moz-grabbing; cursor: -webkit-grabbing; cursor: grabbing;}
-    img {position: absolute; display: block; top: 0; left: 0; opacity: 0; width: 400px; height: 300px; background-color: #eee; border: 1px solid #ccc; transition: opacity .8s ease-out; border-top: 1px solid #ff0000; transform-origin: bottom left;
-
-      &.done {transition: transform .3s ease-out, top .3s ease-out, opacity .2s ease-out;}
-      &.hover {top: -20px;}
-      &.open {top: -284px; opacity: 1 !important; transition: transform .2s .2s ease-out, top .3s ease-out, opacity .2s ease-out;}
-
-      body:not(.load) & {transform: tranlateZ(0) !important;}
-    }
-
-  }
-
-}
-
-
-canvas {
-  width: 100%; height: 100%;
+#b4u-canvas {
+  position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 1; width: 100%; height: 100%;
 }
