allow variation in x,y for each item. update prepend method. add tmp images. update day route. gem updates

--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -64,6 +64,10 @@
 
       = yield
 
+      / .canvas-bgs
+      /   .canvas-bg
+      /   .canvas-bg
+
       %aside
         #about
           %h1 b4u
