--- a/app/css/screen.scss
+++ b/app/css/screen.scss
@@ -3,5 +3,29 @@ body, #container {
 }
 
 #b4u-canvas {
-  position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 1; width: 100%; height: 100%; background-color: #fff;
+  position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 100; width: 100%; height: 100%;
+}
+
+.canvas-bgs {
+  .canvas-bg {
+    position: fixed; top: -50px; right: -50px; bottom: -50px; left: -50px; z-index: 1; background-size: cover; background-repeat: no-repeat; background-position: center center; opacity: 0;
+    -webkit-transition: opacity .1s ease-in-out;
+    -moz-transition: opacity .1s ease-in-out;
+    -ms-transition: opacity .1s ease-in-out;
+    transition: opacity .1s ease-in-out;
+//    -webkit-transition: opacity .1s ease-in-out, -webkit-filter .1s ease-in-out;
+//    -moz-transition: opacity .1s ease-in-out, -moz-filter .1s ease-in-out;
+//    -ms-transition: opacity .1s ease-in-out, -ms-filter .1s ease-in-out;
+//    transition: opacity .1s ease-in-out, filter .1s ease-in-out;
+    -webkit-filter: blur(25px);
+    -moz-filter: blur(25px);
+    -ms-filter: blur(25px);
+    filter: blur(25px);
+
+
+    &:first-child {z-index: 2;}
+    &.current {
+      opacity: 1;
+    }
+  }
 }
